--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.439.0",
+    "mongoose": "^8.6.2",
     "next": "14.2.8",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
