--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.439.0",
     "mongoose": "^8.6.2",
-    "next": "14.2.8",
+    "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
